Changed some small parts of the tests